feat: add IsetDx consumer lib, Docker plan configs, and frontend Binance API chart
- IsetDx_kafka-consumer-lib: 신규 컨슈머 라이브러리 (KafkaApplication/Monitor/HeartbeatMonitor)
- IsetDx_kafka-leader-lib: StatusEvent/Publisher/Watcher 추가, LeaderElector/Settings 수정
- bainanceapi: isetdx 멀티 데이터소스 설정, ProducerStatus API 추가 (/api/producers/status)
- bainanceconsumer: HeartbeatMonitor/ProducerStatus 컨슈머 추가
- isetdxBainanceConsumer: 신규 Binance 데이터 컨슈머 앱 (IsetDx 라이브러리 기반)
- isetdxKafkaConsumer: 신규 범용 Kafka 컨슈머 앱
- isetdxKafkaProducer: Main 업데이트
- frontend: CandlestickChart → Binance REST API 직접 호출 + 무한 스크롤, HomePage Producer 상태 표시
- .gitignore: 임시파일/바이너리 제외 추가
- kafka-start.sh, CLAUDE.md 추가

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>